src/components/AuthFormWrapper/FormLogo/FormLogo.module.sass
@import url('https://fonts.googleapis.com/css2?family=Murecho:wght@200;400;700;800&display=swap')

.formLogo 
    display: flex
    align-items: center
    flex-wrap: wrap
    justify-content: center
    align-content: center

.logo 
    width: 100px
    height:100px

.logoText 
    font-family: 'Murecho', sans-serif
    font-size: 3.5rem
    font-weight: 300
    color: white
    

@media screen and (max-width: 800px) 
    .logoText
        font-size: 3.5rem

    .formLogo 
        display: flex
        align-items: center

@media screen and (max-width: 320px) 
    .logoText
        font-size: 2.5rem

